fixed the overflowing footer, added doenload resume

--- a/styles.css
+++ b/styles.css
@@ -8,13 +8,10 @@ body {
     display: none;
     background-color: #333;
     color: #fff;
-    padding: 20px;
     text-align: center;
     position: relative;
     bottom: 0;
     width: 100%;
-    
-
 }
 
 .body{
@@ -191,7 +188,7 @@ nav ul li a:hover{
     position: relative;
     overflow: hidden;
     transition: all .3s ease-in-out;
-    
+
    
 }
 
